@@ -3,7 +3,8 @@ package com.example;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.logging.Logger;
 
 import org.junit.jupiter.api.Test;
@@ -12,12 +13,13 @@ import com.example.service.API;
 
 public class TestApi {
     private static Logger logger = Logger.getLogger(TestApi.class.getName());
+
     @Test
-    public void testFetch() throws MalformedURLException{
+    public void testFetch() throws MalformedURLException, URISyntaxException {
         logger.info(">>> fetch openlibrary");
         String openlibraryTrendingUrl = "https://openlibrary.org/trending/now.json";
-        Object response = API.fetch(new URL(openlibraryTrendingUrl));
+        Object response = API.fetch(new URI(openlibraryTrendingUrl).toURL());
         logger.info(response.toString());
-        assertTrue( response != null);
-    } 
+        assertTrue(response != null);
+    }
 }
